test/integration/good/identifiers.stan
data {
  int array;
  int upper;
  int lower;
  int multiplier;
  int offset;
}