test/integration/bad/numeric-literal/int-bad1.stan
transformed data {
    int n = 10_000_;
}